# codex-bot

./: .gitignore  .secrets.baseline  404.html  CHANGELOG.md  CLAUDE.md  CODEX_BOT_AUDIT_AND_MIGRATION_PLAN.md  CODEX_CORE_DEPENDENCY_DECISION_NOTE.md  LICENSE  NOTICE  README.md  index.html  mkdocs.yml  objects.inv  project_structure.txt  pyproject.toml
.claude/: project.md  settings.local.json
.github/workflows/: ci.yml  docs.yml  publish.yml
0.x/: 404.html  index.html  objects.inv
0.x/DOCUMENTATION_STANDARD/: index.html
0.x/api/: index.html
0.x/api/animation/: index.html
0.x/api/base/: index.html
0.x/api/director/: index.html
0.x/api/discovery/: index.html
0.x/api/factory/: index.html
0.x/api/fsm/: index.html
0.x/api/helper/: index.html
0.x/api/http/: index.html
0.x/api/i18n/: index.html
0.x/api/middlewares/: index.html
0.x/api/redis/: index.html
0.x/api/router_builder/: index.html
0.x/api/sender/: index.html
0.x/api/url_signer/: index.html
0.x/changelog/: index.html
0.x/en_EN/: index.html
0.x/en_EN/architecture/: index.html
0.x/en_EN/architecture/cli/: index.html
0.x/en_EN/architecture/engine/: index.html
0.x/en_EN/guide/getting_started/: index.html
0.x/en_EN/roadmap/: index.html
0.x/en_EN/tasks/001_high_integrated_debug_system/: index.html
0.x/en_EN/tasks/002_med_docker_infrastructure/: index.html
0.x/en_EN/tasks/003_high_in_bot_guide_system/: index.html
0.x/en_EN/tasks/004_high_redis_fsm_integration/: index.html
0.x/en_EN/tasks/005_med_header_driven_navigation/: index.html
0.x/en_EN/tasks/006_med_redis_stream_contract/: index.html
0.x/en_EN/tasks/ARCHIVE/: index.html
0.x/ru_RU/: index.html
0.x/ru_RU/architecture/: index.html
0.x/ru_RU/roadmap/: index.html
0.x/search/: search_index.json
DOCUMENTATION_STANDARD/: index.html
api/: index.html
api/animation/: index.html
api/base/: index.html
api/cli/: index.html
api/director/: index.html
api/discovery/: index.html
api/factory/: index.html
api/fsm/: index.html
api/helper/: index.html
api/http/: index.html
api/middlewares/: index.html
api/redis/: index.html
api/router_builder/: index.html
api/sender/: index.html
api/url_signer/: index.html
docs/: DOCUMENTATION_STANDARD.md  README.md
docs/api/: README.md  animation.md  base.md  cli.md  director.md  discovery.md  factory.md  fsm.md  helper.md  http.md  i18n.md  middlewares.md  redis.md  router_builder.md  sender.md  url_signer.md
docs/en_EN/: README.md  roadmap.md
docs/en_EN/architecture/: README.md
docs/en_EN/guide/: best_practices.md  getting_started.md
docs/en_EN/tasks/: 001_high_integrated_debug_system.md  002_med_docker_infrastructure.md  003_high_in_bot_guide_system.md  004_high_redis_fsm_integration.md  005_med_header_driven_navigation.md  006_med_redis_stream_contract.md  007_med_sqlalchemy_sender_storage.md  008_high_multi_broker_support.md  009_high_webhook_server.md  ARCHIVE.md  backlog.md
docs/guide/: getting_started.md
docs/ru_RU/: README.md  roadmap.md
docs/ru_RU/architecture/: README.md
docs/ru_RU/guide/: best_practices.md  getting_started.md
docs/ru_RU/tasks/: 001_high_integrated_debug_system.md  002_med_docker_infrastructure.md  003_high_in_bot_guide_system.md  004_high_redis_fsm_integration.md  005_med_header_driven_navigation.md  006_med_redis_stream_contract.md  007_med_sqlalchemy_sender_storage.md  008_high_multi_broker_support.md  009_high_webhook_server.md  ARCHIVE.md  backlog.md
en_EN/: index.html
en_EN/architecture/animation/: index.html
en_EN/architecture/base/: index.html
en_EN/architecture/cli/: index.html
en_EN/architecture/director/: index.html
en_EN/architecture/engine/: index.html
en_EN/architecture/fsm/: index.html
en_EN/architecture/helper/: index.html
en_EN/architecture/redis/: index.html
en_EN/architecture/sender/: index.html
en_EN/architecture/url_signer/: index.html
guide/getting_started/: index.html
ru_RU/: index.html
ru_RU/architecture/animation/: index.html
ru_RU/architecture/base/: index.html
ru_RU/architecture/cli/: index.html
ru_RU/architecture/director/: index.html
ru_RU/architecture/engine/: index.html
ru_RU/architecture/fsm/: index.html
ru_RU/architecture/helper/: index.html
ru_RU/architecture/redis/: index.html
ru_RU/architecture/sender/: index.html
ru_RU/architecture/url_signer/: index.html
search/: search_index.json
src/codex_bot/: __init__.py
src/codex_bot/animation/: __init__.py  animation_service.py
src/codex_bot/base/: __init__.py  base_orchestrator.py  context_dto.py  view_dto.py
src/codex_bot/cli/: __init__.py  commands.py  main.py  management.py  templating.py
src/codex_bot/director/: __init__.py  director.py  protocols.py
src/codex_bot/engine/: __init__.py  container.py  protocols.py  runner.py
src/codex_bot/features/: __init__.py
src/codex_bot/fsm/: __init__.py  common_fsm_handlers.py  garbage_collector.py  state_helper.py  state_manager.py
src/codex_bot/helper/: __init__.py  context_helper.py  id_inspector.py
src/codex_bot/redis/: __init__.py  dispatcher.py  router.py  stream_processor.py
src/codex_bot/sender/: __init__.py  memory_storage.py  protocols.py  redis_storage.py  sender_keys.py  sender_manager.py  view_sender.py
src/codex_bot/stream/: __init__.py  dispatcher.py  router.py
src/codex_bot/url_signer/: __init__.py  service.py
tests/: conftest.py  test_template_consistency.py  test_templates.py
tests/animation/: test_animation_service.py
tests/base/: test_base_orchestrator.py  test_view_dto.py
tests/director/: test_director.py
tests/engine/factory/: test_bot_builder.py
tests/engine/http/: test_api_client.py
tests/engine/middlewares/: test_i18n.py  test_throttling.py
tests/fsm/: test_garbage_collector.py  test_state_manager.py
tests/helper/: test_context_helper.py
tests/integration/: test_placeholder.py  test_templates_e2e.py
tests/redis/: test_dispatcher.py  test_router.py
tests/sender/: test_sender_keys.py
tests/url_signer/: test_url_signer.py
tools/dev/: check.py  generate_project_tree.py
(+233 files in other folders)
