[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codex-bot"
dynamic = ["version"]
description = "Feature-based Aiogram framework library — reusable infrastructure for Telegram bots"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Codex Team" }]
keywords = ["aiogram", "telegram", "bot", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "aiogram>=3.4,<4.0",
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
redis = ["redis[asyncio]>=5.0,<6.0"]
arq = ["arq>=0.25"]
i18n = ["aiogram-i18n>=1.4"]
http = ["httpx>=0.27,<1.0"]
all = [
    "codex-bot[redis,arq,i18n,http]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.0",
    "bandit>=1.7",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

[project.scripts]
codex-bot = "codex_bot.cli:main"

[tool.hatch.version]
path = "src/codex_bot/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_bot"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: unit tests (no external dependencies)",
    "integration: integration tests (may require external services)",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B602", "B605", "B607", "B404"]
