[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "codex-bot"
dynamic = ["version"]
description = "Feature-based Aiogram framework library — reusable infrastructure for Telegram bots"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "CodexDLC" }]
keywords = ["aiogram", "telegram", "bot", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "aiogram>=3.4,<4.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/codexdlc/codex-bot"
Documentation = "https://codexdlc.github.io/codex-bot/"
Repository = "https://github.com/codexdlc/codex-bot"
Changelog = "https://github.com/codexdlc/codex-bot/blob/main/CHANGELOG.md"
Issues = "https://github.com/codexdlc/codex-bot/issues"

[project.optional-dependencies]
cli = [
    "loguru>=0.7.0",
    "questionary>=2.0.0",
]
redis = ["redis>=5.0,<6.0"]
arq = ["arq>=0.25"]
i18n = ["aiogram-i18n>=1.4"]
http = ["httpx>=0.27,<1.0"]
sqlite = ["aiosqlite>=0.19.0"]
postgres = ["asyncpg>=0.29.0"]
db = ["sqlalchemy>=2.0", "alembic>=1.13.0", "codex-bot[sqlite,postgres]"]
all = [
    "codex-bot[cli,redis,arq,i18n,http,db]",
]
dev = [
    "codex-bot[all]",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.0",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "detect-secrets>=1.5",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
    "mkdocs-include-markdown-plugin",
]

[project.scripts]
codex-bot = "codex_bot.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_bot"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = [
    "arq.*",
    "alembic.*",
    "loguru.*",
    "dotenv.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: unit tests (no external dependencies)",
    "integration: integration tests (may require external services)",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B602", "B605", "B607", "B404"]
